<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:background="@drawable/imgperfil"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_email"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:background="#fff"
        android:id="@+id/emailLogin"
        android:inputType="textWebEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:text="@string/txt_senha"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#fff"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textColor="#000"
        android:id="@+id/passwordLogin" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/bt_entrar"
        android:padding="20dp"
        android:id="@+id/btEntrar"/>

</LinearLayout>
